[gd_scene load_steps=7 format=3 uid="uid://dx0l2eirb1rdq"]

[ext_resource type="Script" path="res://addons/temple/fps_controller/fps_controller.gd" id="1_fjmka"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_htpuj"]
radius = 0.6
height = 1.4

[sub_resource type="CapsuleMesh" id="CapsuleMesh_5b8il"]
radius = 0.6
height = 1.4

[sub_resource type="BoxMesh" id="BoxMesh_6cavi"]
size = Vector3(0.1, 0.5, 0.1)

[sub_resource type="BoxMesh" id="BoxMesh_b7mo1"]
size = Vector3(0.1, 0.1, 0.1)

[sub_resource type="PrismMesh" id="PrismMesh_cpr36"]

[node name="FpsController" type="RigidBody3D"]
mass = 80.0
script = ExtResource("1_fjmka")

[node name="CollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_htpuj")

[node name="DebugCapsule" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_5b8il")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0)
mesh = SubResource("BoxMesh_6cavi")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 1.05, 1)
mesh = SubResource("BoxMesh_b7mo1")

[node name="CameraAnchor" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.48972, 0)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 1.48972, 0)
top_level = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="Camera3D"]
transform = Transform3D(1.09278e-08, -4.37114e-08, -0.5, -0.25, -2.18557e-08, -2.18557e-08, -1.09278e-08, 0.5, -4.37114e-08, 4.37114e-08, 0, -0.5)
visible = false
mesh = SubResource("PrismMesh_cpr36")
skeleton = NodePath("../../CameraAnchor")
